--- a/CanalDoOvidio/CanalDoOvidio.csproj
+++ b/CanalDoOvidio/CanalDoOvidio.csproj
@@ -165,6 +165,8 @@
     <Content Include="Images\mulhermaravilha.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\locadoradoovidiao - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\locadoradoovidiao - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
